# nono-py

./: .bandit  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  bump-nono.yml  ci.yml  docs-dispatch.yml  publish.yml  release.yml
data/: policy.json
docs/: docs.json
docs/python/: examples.mdx  installation.mdx  overview.mdx
docs/python/api/: capability-set.mdx  functions.mdx  proxy-config.mdx  snapshot-manager.mdx
docs/specs/: proxy-and-undo-bindings.md
examples/: 01_basic_sandbox.py  02_query_permissions.py  03_sandbox_state.py  04_capability_inspection.py  05_subprocess_sandbox.py  06_capability_basics.py  07_error_handling.py  08_sandboxed_exec.py  09_policy_loading.py  10_policy_enforced.py  11_proxy_basics.py  12_policy_proxy.py  12_snapshot_rollback.py  13_proxy_with_sandbox.py  14_audit_to_s3.py  14b_audit_to_s3.py  README.md  policy_example.json  proxy_demo_support.py
python/nono_py/: __init__.py  _nono_py.pyi  audit.py
scripts/: release.sh
src/: diagnostic.rs  lib.rs  policy.rs  proxy.rs  sandboxed_exec.rs  stderr_observation.rs  undo.rs
tests/: conftest.py  test_audit.py  test_capability_set.py  test_integration_audit.py  test_integration_exec.py  test_integration_snapshot.py  test_policy.py  test_proxy_only.py  test_query.py  test_sandbox_state.py  test_sandboxed_exec.py  test_smoke.py  test_snapshot.py  test_structured_diagnostics.py  utils.py
tests/fixtures/: audit_alpha_vectors.json
