[package]
name = "nono-py"
version = "0.6.0"
edition = "2021"
rust-version = "1.80"
authors = ["Luke Hinds <lukehinds@gmail.com>"]
license = "Apache-2.0"
description = "Python bindings for nono capability-based sandboxing library"
publish = false

[lib]
name = "_nono_py"
crate-type = ["cdylib"]

[dependencies]
nono = "0.24.0"
nono-proxy = "0.24.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local development: override crates.io deps with local paths.
# Remove this section before release, or when the upstream nono crate
# publishes the per-root exclusion filter support (new_per_root).
[patch.crates-io]
nono = { path = "../nono/crates/nono" }
nono-proxy = { path = "../nono/crates/nono-proxy" }
