[package]
name = "nono-py"
version = "0.7.2"
edition = "2021"
rust-version = "1.80"
authors = ["Luke Hinds <lukehinds@gmail.com>"]
license = "Apache-2.0"
description = "Python bindings for nono capability-based sandboxing library"
publish = false

[lib]
name = "_nono_py"
crate-type = ["cdylib"]

[dependencies]
nono = "=0.37.1"
nono-proxy = "=0.37.1"
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
