[package]
name = "nono-py"
version = "0.10.0"
edition = "2024"
rust-version = "1.95"
authors = ["Luke Hinds <luke@alwaysfurther.ai>"]
license = "Apache-2.0"
description = "Python bindings for nono capability-based sandboxing library"
publish = false

[lib]
name = "_nono_py"
crate-type = ["cdylib"]

[dependencies]
nono = "0.57.0"
nono-proxy = "0.57.0"
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
