[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nono-py"
version = "0.5.0"
description = "Python bindings for nono capability-based sandboxing"
readme = "README.md"
authors = [{ name = "Luke Hinds", email = "lukehinds@gmail.com" }]
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["sandbox", "security", "capability", "landlock", "seatbelt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/always-further/nono-py"
Documentation = "https://docs.nono.sh"
Repository = "https://github.com/always-further/nono-py"
Issues = "https://github.com/always-further/nono-py/issues"
Changelog = "https://github.com/always-further/nono-py/releases"

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.4", "maturin>=1,<2"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "nono_py._nono_py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nono_py"]

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.4",
]
