[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nono-py"
version = "0.9.0"
description = "Python bindings for nono capability-based sandboxing"
readme = "README.md"
authors = [{ name = "Luke Hinds", email = "luke@alwaysfurther.ai" }]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["sandbox", "security", "capability", "landlock", "seatbelt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/always-further/nono-py"
Documentation = "https://docs.nono.sh"
Repository = "https://github.com/always-further/nono-py"
Issues = "https://github.com/always-further/nono-py/issues"
Changelog = "https://github.com/always-further/nono-py/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "pyright>=1.1",
    "ruff>=0.4",
    "maturin>=1.13.2",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "nono_py._nono_py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: fast sanity check that core functionality is reachable",
    "integration: multi-step end-to-end scenario",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nono_py"]

[dependency-groups]
dev = [
    "maturin>=1.13.2",
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.9.4",
]
